- made address mode and opcode enums, there were a couple times that the wrong string were used and this prevents that in future - added extra 65c02 address modes in preparation of adding more 65c02 instructions - carriage return toggle in options since wozmon expects \r not \n